fixed layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,8 @@ button:focus,
   display: grid;
   grid-template-columns: 2fr 415px;
   grid-template-rows: 1fr;
-  height: 100%;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 @media (min-width: 1200px) {
@@ -501,6 +502,7 @@ button:focus,
 @media (max-width: 768px) {
   .page__layout__row {
     grid-template-columns: 1fr;
+    height: calc(100vh - 48px);
   }
 }
 .page__layout__col {
