--- a/sass/layout/_layout.sass
+++ b/sass/layout/_layout.sass
@@ -13,7 +13,8 @@
         // grid-template-columns: 2fr minmax(415px, 1fr)
         grid-template-columns: 2fr 415px
         grid-template-rows: 1fr
-        height: 100%
+        width: 100%
+        height: 100vh
         overflow: hidden
 
         @media (min-width: 1200px)
@@ -24,6 +25,7 @@
 
         @media (max-width: 768px)
             grid-template-columns: 1fr
+            height: calc(100vh - 48px)
 
     &__col
         position: relative
